fix support form confirmation spacing #984

--- a/assets/css/less/pages.less
+++ b/assets/css/less/pages.less
@@ -358,6 +358,10 @@
 		&.refund-support-form-container {
 			margin-top: 20px;
 		}
+
+		& .gform_confirmation_wrapper.edd-gf-support-tickets-form {
+			margin-top: 40px;
+		}
 	}
 
 	& .standard-support-form-container {
